--- a/src/index.scss
+++ b/src/index.scss
@@ -5,4 +5,7 @@
 // 鱼吧帖子标题
 div[class^=index-listTitle] a {
   border-bottom: 2px solid rgba(86, 86, 87, .8);
+  border-left: 2px solid rgba(86, 86, 87, .8);
+  border-right: 2px solid rgba(86, 86, 87, .8);
+  border-radius: 3px;
 }
